<?xml version="1.0" encoding="utf-8"?>
<TextView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/elementTextView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

</TextView>
